# stock-recommendation

./: .gitignore  README.md  docker-compose.yml
app/: pyproject.toml
app/stock/: schema_definitions.py  services.py  urls.py  views.py
app/take_home/: settings.py  urls.py
